[package]
name = "quiestce"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "tracing"] }
axum-extra = { version = "0.9.2", features = ["typed-header"] }
jsonwebtoken = "9.2.0"
moka = { version = "0.12.5", features = ["future"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_qs = "0.12.0"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.10"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
uuid = { version = "1.7.0", features = ["serde"] }

[dev-dependencies]
http-body-util = "0.1.0"
oauth2 = "4.4.2"
regex = "1.10.3"
tower = "0.4.13"
